# Learn-Blockchain

./: Readme.md
BlockChainWork/: CMakeLists.txt  main.cpp
BlockChainWork/blockchain/: CMakeLists.txt  DataBase.cpp  DataBase.h  MerkleTree.cpp  MerkleTree.h
BlockChainWork/blockchain/block/: Block.cpp  Block.h  Miner.cpp  Miner.h
BlockChainWork/blockchain/transaction/: Transaction.cpp  Transaction.h  TxIn.cpp  TxIn.h  TxOut.cpp  TxOut.h  UTXO.cpp  UTXO.h
BlockChainWork/blockchain/wallet/: SimpleWallet.cpp  SimpleWallet.h  Wallet.cpp  Wallet.h  WalletKeys.cpp  WalletKeys.h
BlockChainWork/test/: CMakeLists.txt  TestCrypto.cpp  TestCrypto.h  test.cpp  test.h
BlockChainWork/util/: AsymmetricKeys.h  CMakeLists.txt  ECDSAKeys.cpp  ECDSAKeys.h  SM2.cpp  SM2.h  util.cpp  util.h
